--- a/.gitignore
+++ b/.gitignore
@@ -31,28 +31,41 @@ doc/man1/openssl-cms.pod
 doc/man1/openssl-crl.pod
 doc/man1/openssl-dgst.pod
 doc/man1/openssl-dhparam.pod
+doc/man1/openssl-dsa.pod
 doc/man1/openssl-dsaparam.pod
+doc/man1/openssl-ec.pod
 doc/man1/openssl-ecparam.pod
 doc/man1/openssl-enc.pod
+doc/man1/openssl-engine.pod
 doc/man1/openssl-gendsa.pod
+doc/man1/openssl-genpkey.pod
 doc/man1/openssl-genrsa.pod
+doc/man1/openssl-info.pod
+doc/man1/openssl-list.pod
 doc/man1/openssl-ocsp.pod
 doc/man1/openssl-passwd.pod
 doc/man1/openssl-pkcs12.pod
+doc/man1/openssl-pkcs7.pod
 doc/man1/openssl-pkcs8.pod
+doc/man1/openssl-pkey.pod
+doc/man1/openssl-pkeyparam.pod
 doc/man1/openssl-pkeyutl.pod
 doc/man1/openssl-rand.pod
 doc/man1/openssl-req.pod
+doc/man1/openssl-rsa.pod
 doc/man1/openssl-rsautl.pod
 doc/man1/openssl-s_client.pod
 doc/man1/openssl-s_server.pod
 doc/man1/openssl-s_time.pod
 doc/man1/openssl-smime.pod
 doc/man1/openssl-speed.pod
+doc/man1/openssl-spkac.pod
 doc/man1/openssl-srp.pod
+doc/man1/openssl-storeutl.pod
 doc/man1/openssl-ts.pod
 doc/man1/openssl-verify.pod
 doc/man1/openssl-x509.pod
+doc/man1/openssl.pod
 
 # error code files
 /crypto/err/openssl.txt.old
