--- a/doc/man1/openssl-x509.pod.in
+++ b/doc/man1/openssl-x509.pod.in
@@ -490,6 +490,26 @@ This option can be used in conjunction with the B<-force_pubkey> option
 to create a certificate even without providing an input certificate
 or certificate request.
 
+=item B<-utf8>
+
+This option causes field values to be interpreted as UTF8 strings, by
+default they are interpreted as ASCII. This means that the field
+values, whether prompted from a terminal or obtained from a
+configuration file, must be valid UTF8 strings. Applies to the
+value set by the B<-subj> and B<-subject> flags.
+
+=item B<-multivalue-rdn>
+
+This option causes the B<-subj> argument to be interpreted with full
+support for multivalued RDNs. Applies to the value set by the
+B<-subj> and B<-subject> flags.
+
+Example:
+
+I</DC=org/DC=OpenSSL/DC=users/UID=123456+CN=John Doe>
+
+If -multi-rdn is not used then the UID value is I<123456+CN=John Doe>.
+
 =back
 
 =head2 Name Options
