--- a/doc/man1/openssl-s_server.pod.in
+++ b/doc/man1/openssl-s_server.pod.in
@@ -112,6 +112,7 @@ B<openssl> B<s_server>
 [B<-groups> I<val>]
 [B<-curves> I<val>]
 [B<-named_curve> I<val>]
+[B<-version_mask> I<val>]
 [B<-cipher> I<val>]
 [B<-ciphersuites> I<val>]
 [B<-dhparam> I<infile>]
@@ -569,14 +570,24 @@ For a list of all possible curves, use:
 
     $ openssl ecparam -list_curves
 
+=item B<-version_mask> I<val>
+
+Sets the list of versions. This list will be used as the mask for cipher strings
+where no version was specified. The format for this list is a simple vertical bar
+("|") separated list of version names. This option, if used, must be specified
+before B<-cipher> and will set B<-ciphersuites> to empty string.
+See L<openssl-ciphers(1)> for more information.
+
+
 =item B<-cipher> I<val>
 
-This allows the list of TLSv1.2 and below ciphersuites used by the server to be
-modified. This list is combined with any TLSv1.3 ciphersuites that have been
-configured. When the client sends a list of supported ciphers the first client
-cipher also included in the server list is used. Because the client specifies
-the preference order, the order of the server cipherlist is irrelevant. See
-L<openssl-ciphers(1)> for more information.
+This allows the list of ciphersuites used by the server to be modified. If there
+are no TLSv1.3 ciphersuites and B<-version_mask> is not used, this list will be
+combined with any TLSv1.3 ciphersuites that have been configured using
+B<-ciphersuites>. When the client sends a list of supported ciphers the first
+client cipher also included in the server list is used. Because the client
+specifies the preference order, the order of the server cipherlist is irrelevant.
+See L<openssl-ciphers(1)> for more information.
 
 =item B<-ciphersuites> I<val>
 
@@ -587,6 +598,10 @@ cipher also included in the server list is used. Because the client specifies
 the preference order, the order of the server cipherlist is irrelevant. See
 L<openssl-ciphers(1)> command for more information. The format for this list is
 a simple colon (":") separated list of TLSv1.3 ciphersuite names.
+
+If at least one valid TLSv1.3 ciphersuite is in the B<-cipher>, or parameter
+B<-version_mask> is used, all ciphers entered here will be erased
+(B<-ciphersuites> will be set to empty string).
 
 =item B<-dhparam> I<infile>
 
