Add tests for equal-preference groups and priority flag.

--- a/test/ssl-tests/25-cipher.conf
+++ b/test/ssl-tests/25-cipher.conf
@@ -1,6 +1,6 @@
 # Generated with generate_ssl_tests.pl
 
-num_tests = 9
+num_tests = 12
 
 test-0 = 0-cipher-server-1
 test-1 = 1-cipher-server-2
@@ -10,7 +10,10 @@ test-4 = 4-cipher-server-pref-2
 test-5 = 5-cipher-server-pref-client-list
 test-6 = 6-cipher-server-pref-not-mobile
 test-7 = 7-cipher-server-pref-mobile
-test-8 = 8-cipher-server-pref-mobile2
+test-8 = 8-cipher-server-preference-flag
+test-9 = 9-cipher-server-pref-mobile2
+test-10 = 10-cipher-server-pref-mobile3
+test-11 = 11-cipher-server-equal-preference-groups
 # ===========================================================
 
 [0-cipher-server-1]
@@ -218,27 +221,106 @@ ExpectedCipher = ECDHE-RSA-AES256-SHA384
 
 # ===========================================================
 
-[8-cipher-server-pref-mobile2]
-ssl_conf = 8-cipher-server-pref-mobile2-ssl
+[8-cipher-server-preference-flag]
+ssl_conf = 8-cipher-server-preference-flag-ssl
 
-[8-cipher-server-pref-mobile2-ssl]
-server = 8-cipher-server-pref-mobile2-server
-client = 8-cipher-server-pref-mobile2-client
+[8-cipher-server-preference-flag-ssl]
+server = 8-cipher-server-preference-flag-server
+client = 8-cipher-server-preference-flag-client
 
-[8-cipher-server-pref-mobile2-server]
+[8-cipher-server-preference-flag-server]
+Certificate = ${ENV::TEST_CERTS_DIR}/servercert.pem
+CipherString = [DH]:AES:*AES256-SHA
+MaxProtocol = TLSv1.2
+Options = ServerPreference
+PrivateKey = ${ENV::TEST_CERTS_DIR}/serverkey.pem
+
+[8-cipher-server-preference-flag-client]
+CipherString = DEFAULT:^AES256-SHA
+MaxProtocol = TLSv1.2
+VerifyCAFile = ${ENV::TEST_CERTS_DIR}/rootcert.pem
+VerifyMode = Peer
+
+[test-8]
+ExpectedCipher = AES256-SHA
+
+
+# ===========================================================
+
+[9-cipher-server-pref-mobile2]
+ssl_conf = 9-cipher-server-pref-mobile2-ssl
+
+[9-cipher-server-pref-mobile2-ssl]
+server = 9-cipher-server-pref-mobile2-server
+client = 9-cipher-server-pref-mobile2-client
+
+[9-cipher-server-pref-mobile2-server]
 Certificate = ${ENV::TEST_CERTS_DIR}/servercert.pem
 CipherString = ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-CHACHA20-POLY1305
 MaxProtocol = TLSv1.2
 Options = ServerPreference,PrioritizeChaCha
 PrivateKey = ${ENV::TEST_CERTS_DIR}/serverkey.pem
 
-[8-cipher-server-pref-mobile2-client]
+[9-cipher-server-pref-mobile2-client]
 CipherString = ECDHE-RSA-CHACHA20-POLY1305:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384
 MaxProtocol = TLSv1.2
 VerifyCAFile = ${ENV::TEST_CERTS_DIR}/rootcert.pem
 VerifyMode = Peer
 
-[test-8]
+[test-9]
 ExpectedCipher = ECDHE-RSA-CHACHA20-POLY1305
+
+
+# ===========================================================
+
+[10-cipher-server-pref-mobile3]
+ssl_conf = 10-cipher-server-pref-mobile3-ssl
+
+[10-cipher-server-pref-mobile3-ssl]
+server = 10-cipher-server-pref-mobile3-server
+client = 10-cipher-server-pref-mobile3-client
+
+[10-cipher-server-pref-mobile3-server]
+Certificate = ${ENV::TEST_CERTS_DIR}/servercert.pem
+CipherString = ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-CHACHA20-POLY1305:*CHACHA20
+MaxProtocol = TLSv1.2
+Options = ServerPreference
+PrivateKey = ${ENV::TEST_CERTS_DIR}/serverkey.pem
+
+[10-cipher-server-pref-mobile3-client]
+CipherString = ECDHE-RSA-CHACHA20-POLY1305:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384
+MaxProtocol = TLSv1.2
+VerifyCAFile = ${ENV::TEST_CERTS_DIR}/rootcert.pem
+VerifyMode = Peer
+
+[test-10]
+ExpectedCipher = ECDHE-RSA-CHACHA20-POLY1305
+
+
+# ===========================================================
+
+[11-cipher-server-equal-preference-groups]
+ssl_conf = 11-cipher-server-equal-preference-groups-ssl
+
+[11-cipher-server-equal-preference-groups-ssl]
+server = 11-cipher-server-equal-preference-groups-server
+client = 11-cipher-server-equal-preference-groups-client
+
+[11-cipher-server-equal-preference-groups-server]
+Certificate = ${ENV::TEST_CERTS_DIR}/servercert.pem
+CipherString = [TLSv1.3]:DH
+MaxProtocol = TLSv1.3
+Options = ServerPreference
+PrivateKey = ${ENV::TEST_CERTS_DIR}/serverkey.pem
+
+[11-cipher-server-equal-preference-groups-client]
+CiphVersionMask = ALL
+CipherString = DEFAULT:^TLS_AES_128_GCM_SHA256
+MaxProtocol = TLSv1.3
+VerifyCAFile = ${ENV::TEST_CERTS_DIR}/rootcert.pem
+VerifyMode = Peer
+
+[test-11]
+ExpectedCipher = TLS_AES_128_GCM_SHA256
 
 
