--- a/test/ssl-tests/28-seclevel.conf.in
+++ b/test/ssl-tests/28-seclevel.conf.in
@@ -27,7 +27,7 @@ our @tests_ec = (
         server => { "CipherString" => "DEFAULT:\@SECLEVEL=3",
                     "Certificate" => test_pem("server-ed448-cert.pem"),
                     "PrivateKey" => test_pem("server-ed448-key.pem") },
-        client => { },
+        client => { "VerifyCAFile" => test_pem("root-ed448-cert.pem") },
         test   => { "ExpectedResult" => "Success" },
     },
     {
@@ -49,7 +49,7 @@ our @tests_tls1_2 = (
                     "Certificate" => test_pem("server-ed448-cert.pem"),
                     "PrivateKey" => test_pem("server-ed448-key.pem"),
                     "MaxProtocol" => "TLSv1.2" },
-        client => { },
+        client => { "VerifyCAFile" => test_pem("root-ed448-cert.pem") },
         test   => { "ExpectedResult" => "Success" },
     },
 );
