--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ doc/man1/openssl-x509.pod
 /test/ossl_shim/ossl_shim
 /test/rsa_complex
 /test/confdump
+/test/bio_prefix_text
 # Other generated files in test/
 /test/provider_internal_test.conf
 /test/fipsinstall.conf
