--- a/doc/man7/openssl_user_macros.pod.in
+++ b/doc/man7/openssl_user_macros.pod.in
@@ -31,7 +31,7 @@ The value is a version number, given in one of the following two forms:
 
 This is the form supported for all versions up 1.1.x, where C<M>
 represents the major number, C<NN> represents the minor number, and
-C<FF> represents the fix number, all as hexadecimal numbers.
+C<FF> represents the fix number, as a hexadecimal numbers.
 For version 1.1.0, that's C<0x10100000L>.
 
 Any version number may be given, but these numbers are
