--- a/doc/man1/openssl-s_server.pod.in
+++ b/doc/man1/openssl-s_server.pod.in
@@ -648,7 +648,7 @@ by the client in binary mode.
 
 {- $OpenSSL::safe::opt_v_item -}
 
-If the server requests a client certificate, than
+If the server requests a client certificate, then
 verification errors are displayed, for debugging, but the command will
 proceed unless the B<-verify_return_error> option is used.
 
