--- a/doc/man1/openssl-gendsa.pod.in
+++ b/doc/man1/openssl-gendsa.pod.in
@@ -50,8 +50,8 @@ standard output is used.
 
 =item B<-passout> I<arg>
 
-The passphrase used for the input.
-See see L<openssl(1)/Pass Phrase Options>.
+The passphrase used for the output file.
+See L<openssl(1)/Pass Phrase Options>.
 
 =item B<-aes128>, B<-aes192>, B<-aes256>, B<-aria128>, B<-aria192>, B<-aria256>, B<-camellia128>, B<-camellia192>, B<-camellia256>, B<-des>, B<-des3>, B<-idea>
 
