Fix some nits in Configure stuff

--- a/Configurations/15-android.conf
+++ b/Configurations/15-android.conf
@@ -78,7 +78,7 @@
                                      } glob("$ndk/platforms/android-$api");
                 die "no $ndk/platforms/android-$api" if ($#platforms < 0);
 
-                $sysroot = "@platforms[$#platforms]/arch-$arch";
+                $sysroot = "$platforms[$#platforms]/arch-$arch";
                 $sysroot =~ m|/android-([0-9]+)/arch-$arch|;
                 $api = $1;
             }
