--- a/doc/man1/openssl-s_client.pod.in
+++ b/doc/man1/openssl-s_client.pod.in
@@ -449,7 +449,7 @@ Export keying material using the specified label.
 
 =item B<-keymatexportlen> I<len>
 
-Export the specified number of bytes of keyint material; default is 20.
+Export the specified number of bytes of keying material; default is 20.
 
 Show all protocol messages with hex dump.
 
