--- a/.travis.yml
+++ b/.travis.yml
@@ -115,7 +115,7 @@ matrix:
           script: true
         - os: linux
           compiler: gcc
-          env: CONFIGURE_TARGET="linux-generic32" CONFIG_OPTS="--strict-warnings no-shared no-dso no-pic no-autoload-config no-engine no-comp no-cms no-dh no-dsa no-ec2m no-srp no-des no-mdc2 no-md4 no-rc2 no-rc4 no-bf no-camellia no-cast no-idea no-rmd160 no-seed no-whirlpool no-ocsp no-ocb no-sm2 no-sm3 no-sm4 no-ssl3 no-ssl3-method no-psk no-heartbeats no-nextprotoneg no-sctp no-srtp no-ct no-async no-asm -DOPENSSL_SMALL_FOOTPRINT"
+          env: CONFIGURE_TARGET="linux-generic32" CONFIG_OPTS="--strict-warnings no-shared no-dso no-pic no-autoload-config no-engine no-comp no-cms no-dh no-dsa no-ec2m no-srp no-des no-mdc2 no-md4 no-rc2 no-rc4 no-bf no-camellia no-cast no-idea no-rmd160 no-seed no-whirlpool no-ocsp no-ocb no-sm2 no-sm3 no-sm4 no-ssl3 no-ssl3-method no-psk no-nextprotoneg no-sctp no-srtp no-ct no-async no-asm -DOPENSSL_NO_SECURE_MEMORY DOPENSSL_SMALL_FOOTPRINT"
     exclude:
         - os: linux
           compiler: clang
