--- a/doc/man1/openssl-ocsp.pod.in
+++ b/doc/man1/openssl-ocsp.pod.in
@@ -82,12 +82,10 @@ This command performs many common OCSP tasks. It can be used
 to print out requests and responses, create requests and send queries
 to an OCSP responder and behave like a mini OCSP server itself.
 
-This command operates as either a client or a server.
-The first entry in the L</SYNOPSIS> section lists the client options,
-the second entry the server options. The options are described in detail
-below, divided into client and server options.
-
 =head1 OPTIONS
+
+This command operates as either a client or a server.
+The options are described below, divided into those two modes.
 
 =head2 OCSP Client Options
 
