shlib_wrap.sh: add module and engine paths to environment if unset
The testsuite invokes many openssl commands using the shlib_wrap.sh script.
It used to be possible to copy those commands for testing them standalone
or run them in the debugger (see also description of issue #10628).
With providers this did not work anymore, because the script did not
set the `OPENSSL_MODULES` and `OPENSSL_ENGINES` environment variables,
they were already set by the `_tests` make target.

To make `shlib_wrap.sh` self-contained again, we set the `OPENSSL_MODULES`
and `OPENSSL_ENGINES` environment variables if they are unset. In fact,
that's just what `opensslwrap.sh` already does.

--- a/util/shlib_wrap.sh.in
+++ b/util/shlib_wrap.sh.in
@@ -30,8 +30,15 @@ fi
 THERE="`echo $0 | sed -e 's|[^/]*$||' 2>/dev/null`.."
 [ -d "${THERE}" ] || exec "$@"	# should never happen...
 
-LIBCRYPTOSO="${THERE}/{- platform->sharedlib('libcrypto') -}"
-LIBSSLSO="${THERE}/{- platform->sharedlib('libssl') -}"
+if [ -z "$OPENSSL_ENGINES" ] && [ -d "${THERE}/engines" ] ; then
+	OPENSSL_ENGINES="${THERE}/engines"; export OPENSSL_ENGINES
+fi
+if [ -z "$OPENSSL_MODULES" ] && [ -d "${THERE}/providers" ] ; then
+	OPENSSL_MODULES="${THERE}/providers"; export OPENSSL_MODULES
+fi
+
+LIBCRYPTOSO="${THERE}/libcrypto.so.3"
+LIBSSLSO="${THERE}/libssl.so.3"
 
 SYSNAME=`(uname -s) 2>/dev/null`;
 case "$SYSNAME" in
